decafcomp/llvm/dev/gcd.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: llvm/dev/gcd.llvm:10:3: error: instruction forward referenced with type 'i32*'
  %a = load i32, i32* %a
  ^
